# solar-eclipse

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/code_ref/: index.rst
docs/guide/: index.rst
eclipse/: __init__.py  meta.py  process.py
eclipse/sample_photos/: __init__.py
eclipse/tests/: test_meta.py
examples/: README.txt  fit_circle.py  photo_to_map.py  photo_to_map_easy.py  simple.py  sun_and_predict_regulus.py
notebooks/: EclipseTimeSkyField.ipynb  FindingtheSun.ipynb  Processing your Eclipse Photo with SunPy.ipynb  Processing+your+Eclipse+Photo+with+SunPy(1).ipynb
sample-photos/: README.md  total_solar_eclipse.tiff
scripts/: process_solar_photo.py  seiss.py
