[metadata]
name = eclipse
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE
url = https://sunpy.org
description = A helper library to process photos of solar eclipse with sunpy
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires = 
  sunpy[map]
  scikit-image
  photutils
  exifread

[options.extras_require]
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "eclipse" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  eclipse/__init*
  eclipse/conftest.py
  eclipse/*setup_package*
  eclipse/tests/*
  eclipse/*/tests/*
  eclipse/extern/*
  eclipse/version*
  */eclipse/__init*
  */eclipse/conftest.py
  */eclipse/*setup_package*
  */eclipse/tests/*
  */eclipse/*/tests/*
  */eclipse/extern/*
  */eclipse/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
